--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ install:
   - pip install -r requirements.txt
   - python setup.py install
 
-script: python -m unittest discover
+script: python manage.py test
